--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecipeApp"
+        android:name=".RecipeApp"
         tools:targetApi="31">
         <activity
             android:name=".ui.activities.AuthActivity"
